--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "@svgr/webpack": "^6.2.1",
     "next": "12.0.10",
     "next-images": "^1.8.4",
     "react": "17.0.2",
