--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@svgr/webpack": "^6.2.1",
+    "near-api-js": "^0.45.1",
     "next": "12.0.10",
     "next-images": "^1.8.4",
     "react": "17.0.2",
