--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@svgr/webpack": "^6.3.1",
+    "canvas-sketch": "^0.7.6",
+    "canvas-sketch-util": "^1.10.0",
+    "color-interpolate": "^1.0.5",
     "near-api-js": "^0.45.1",
     "next": "12.2.4",
     "next-images": "^1.8.4",
